plugins {
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 17
}

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDir './src/main/java'
        }
    }
}

dependencies {
    implementation 'net.portswigger.burp.extensions:montoya-api:2023.12.1'
    implementation 'org.yaml:snakeyaml:2.0'
    implementation 'dk.brics.automaton:automaton:1.11-8'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
    implementation 'org.xerial:sqlite-jdbc:3.50.3.0'
}

test {
    useJUnitPlatform()
}

jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
